--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,13 +27,10 @@ jobs:
       - uses: actions/setup-node@v2
       
       - name: install deps
-        run: npm i --global
+        run: npm ci
       
-      - name: install vue-cli-service
-        run: npm i @vue/cli-service --global
-        
       - name: build project
-        run: npm run build
+        run: npx vue-cli-service build 
         
       - name: Installing Surge
         run: npm install surge --global
