--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       
       - uses: actions/setup-node@v2
       
-      - name: install deps
+      - name: install clean deps
         run: npm ci
       
       - name: build project
