--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "bracketSpacing": true,
   "bracketSameLine": true,
   "semi": false,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "printWidth": 120
 }
