--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vue3-date-time-picker": "^2.5.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.1",
+    "@types/jwt-decode": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
