--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.1.9",
     "@types/js-cookie": "^3.0.1",
     "@types/jwt-decode": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
